# MacAgent

./: .gitignore  CLAUDE.md  LICENSE  README.md
.github/workflows/: rust.yml  swift.yml  worker.yml
docs/release/: IOS_RELEASE.md  MAC_RELEASE.md
docs/superpowers/plans/: 2026-04-30-m0-skeleton.md  2026-04-30-m1-pair-control-plane.md  2026-04-30-m2-webrtc-bringup.md  2026-05-01-m3-cli-channel-v2.md  2026-05-01-m4-clipboard-notifications.md  2026-05-01-m5-2-5-real-encoder.md  2026-05-01-m5-gui-supervise.md  2026-05-01-m6-input-injection.md  2026-05-01-m7-launch-multi-supervise.md  2026-05-01-m8-polish-testflight.md  archived-2026-04-30-m3-cli-channel-v1.md
docs/superpowers/specs/: 2026-04-30-ios-input-compose-design.md  2026-04-30-mac-iphone-workspace-design.md  2026-05-01-m6-input-injection-design.md  2026-05-01-m7-launch-multi-supervise-design.md  2026-05-01-m8-polish-testflight-design.md
ios-app/: README.md
ios-app/MacIOSWorkspace/: Canonical.swift  ContentView.swift  CtrlMessage.swift  ErrorMessage.swift  MacIOSWorkspace.entitlements  MacIOSWorkspaceApp.swift  PairKeys.swift  PairStore.swift  PairedView.swift  PairingFlow.swift  QRScannerView.swift  RtcClient.swift  RtcGlue.swift  SessionListView.swift  SessionStore.swift  SignalingClient.swift
ios-app/MacIOSWorkspace.xcodeproj/: project.pbxproj
ios-app/MacIOSWorkspace.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
ios-app/MacIOSWorkspace.xcodeproj/xcshareddata/xcschemes/: MacIOSWorkspace.xcscheme
ios-app/MacIOSWorkspace/Clipboard/: ClipboardPanel.swift  ClipboardStore.swift
ios-app/MacIOSWorkspace/Compose/: ComposeSheet.swift
ios-app/MacIOSWorkspace/Gui/: GuiStreamDetailView.swift  GuiStreamView.swift  LaunchAppSheet.swift  SupervisionGrid.swift  SupervisionStore.swift  SupervisionTile.swift  ViewportTracker.swift  WindowListView.swift
ios-app/MacIOSWorkspace/Input/: GuiInputBar.swift  HardwareKeyController.swift  InputClient.swift  KeyMapper.swift  ModifierStickyRow.swift  SpecialKeyRow.swift
ios-app/MacIOSWorkspace/Notify/: PushHandler.swift  WatcherStore.swift  WatchersView.swift
ios-app/MacIOSWorkspace/Term/: HistoryView.swift  InputBar.swift  TermStyle.swift  TermView.swift
ios-app/MacIOSWorkspaceTests/: ComposeSheetTests.swift  InputClientTests.swift  KeyMapperTests.swift  MacIOSWorkspaceTests.swift  PairKeysTests.swift
ios-app/MacIOSWorkspaceUITests/: MacIOSWorkspaceUITests.swift  MacIOSWorkspaceUITestsLaunchTests.swift
mac-agent/: Cargo.toml  README.md  macagent.entitlements
mac-agent/crates/macagent-app/: Cargo.toml  build.rs
mac-agent/crates/macagent-app/src/: agent_socket.rs  clipboard_bridge.rs  input_injector.rs  keychain.rs  launcher.rs  launcher_m7.rs  main.rs  notify_engine.rs  onboarding.rs  pair_qr.rs  producer_registry.rs  push_client.rs  rtc_glue.rs  session_router.rs  supervision_router.rs  ui.rs  window_fitter.rs
mac-agent/crates/macagent-app/src/gui_capture/: annexb.rs  encoder.rs  mod.rs  perm.rs  stream.rs  thumbnail.rs  windows.rs
mac-agent/crates/macagent-app/src/notify/: mod.rs
mac-agent/crates/macagent-app/src/run/: mod.rs  parser.rs  pty.rs  socket_client.rs
mac-agent/crates/macagent-core/: Cargo.toml
mac-agent/crates/macagent-core/src/: ctrl_msg.rs  error_msg.rs  lib.rs  pair_auth.rs  rtc_peer.rs  signaling.rs  socket_proto.rs
mac-agent/crates/macagent-core/src/terminal/: history.rs  mod.rs  runs.rs  snapshot.rs
mac-agent/crates/macagent-core/tests/: canonical_cross_test.rs  ctrl_msg_v2_test.rs  m5_protocol_test.rs  m6_protocol.rs  m7_protocol.rs  pair_auth_test.rs  rtc_peer_test.rs  signaling_test.rs  socket_proto_test.rs  terminal_test.rs
worker/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
worker/src/: apns.ts  crypto.ts  env.ts  index.ts  kv.ts  pair.ts  push.ts  signaling.ts  turn.ts
worker/test/: health.test.ts  helpers.ts  pair.test.ts  push.test.ts  signaling.test.ts  turn.test.ts  types.d.ts
