[workspace]
resolver = "2"
members = [
    "crates/macagent-core",
    "crates/macagent-app",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.78"
authors = ["Bruce <bruce@hemory.com>"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
image = { version = "0.25", default-features = false, features = ["png"] }
x25519-dalek = { version = "2.0", features = ["static_secrets", "serde"] }
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.7"
security-framework = "3.0"
qrcode = "0.14"
webrtc = "0.11"
alacritty_terminal = "0.25.1"
portable-pty = "0.9"
clap = { version = "4", features = ["derive"] }
libc = "0.2"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"
