[package]
name = "macagent-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "macagent"
path = "src/main.rs"

[dependencies]
macagent-core = { path = "../macagent-core" }
tokio = { workspace = true }
anyhow = { workspace = true }
image = { workspace = true }
qrcode = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
security-framework = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
webrtc = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
clap = { workspace = true }
portable-pty = { workspace = true }
alacritty_terminal = { workspace = true }
bytes = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tempfile = "3"
