[package]
name = "macagent-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
x25519-dalek = { workspace = true }
rand = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = "0.24"
futures-util = "0.3"
urlencoding = "2.1"
webrtc = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
